 (Format: Year/Month/Day)
Changes for 1.0rc3:
*06/12/20:
   * Fixed a few bugs with tabbed windows on restart (Mark)
     Window.cc FocusControl.hh
*06/12/19:
   * Little simplification of data structure for keybindings (Mark)
     Side effects:
     - "Mod4 a b" now behaves like "Mod4 a None b" -- in fact, "None" is now
       completely obsolete
     - You can press "Escape" to cancel any Emacs-style keychain in progress
       (unless it's bound to something else)
     - If there is a conflict between bindings, the first one in the file wins
     - Fixes handling of keychains like "Mod4 a Mod1 b"
     - Should fix some issues with "None" modifier
     Keys.cc/hh FbTk/KeyUtil.cc fluxbox.cc
*06/12/18:
   * Rotate items in toolbar the same way as tabs (Mark)
     Toolbar.cc
*06/12/17:
   * Stop cycling focus when any other command is run, e.g. bug #1595336 (Mark)
     fluxbox.cc WorkspaceCmd.cc
*06/12/16:
   * Remove useless stuff from code that reloads configuration (Mark)
     fluxbox.cc
*06/11/07:
   * Cosmetic patch from Slava Semushin
     tests/texturetest.cc WorkspaceCmd.cc ToolbarTheme.cc FbTk/Layer.hh
     FbTk/MultLayers.cc FbTk/Image.cc FbTk/TextBox.cc Shape.cc ClientPattern.cc
     FbWinFrame.cc
*06/10/30:
   * Cosmetic patch from Slava Semushin
     CommandDialog.cc Ewmh.cc FbCommands.cc FbAtoms.cc Xutil.cc Gnome.cc
     MenuTheme.cc Window.cc Resources.cc tests/testFont.cc FbWinFrameTheme.cc
     SystemTray.cc MenuCreator.cc FbTk/TextureRender.cc FbTk/XFontImp.cc
     FbTk/EventManager.cc FbTk/Menu.cc FbTk/FbPixmap.cc FbTk/ImageControl.cc
     FbTk/XmbFontImp.cc FbTk/Font.cc ScreenResources.cc fluxbox.cc
     Workspace.cc Toolbar.cc IconbarTool.cc util/fbsetroot.cc
     util/fbrun/FbRun.cc util/fbrun/main.cc
*06/10/27:
   * Changed mode for .fluxbox/startup to 644 (Mathias)
     some people on noexec-mounted partitions ran into problems
     util/startfluxbox.in
   * Small updates to the asciidoc-docs (Mathias)
   * Cosmetic patch from Slava Semushin