@@ -1,5 +1,10 @@
  (Format: Year/Month/Day)
 Changes for 1.0rc3:
+*06/12/27:
+   * Don't assume "Jump" and "*Hidden" say "yes" in apps file (Mark)
+   * Jump to autogrouped windows on another workspace if set to do so in
+     apps file (Mark)
+     Remember.cc
 *06/12/20:
    * Fixed a few bugs with tabbed windows on restart (Mark)
      Window.cc FocusControl.hh
